adding the interfaces directory and placing the interface file in this directory

--- a/ValidateXmlFileUseXsdSchemaPoC/ValidateXmlFileUseXsdSchemaPoC.csproj
+++ b/ValidateXmlFileUseXsdSchemaPoC/ValidateXmlFileUseXsdSchemaPoC.csproj
@@ -79,7 +79,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IXmlFileValidation.cs" />
+    <Compile Include="Interfaces\IXmlFileValidation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SaxonValidate.cs" />
