changing class names and solution and Project

--- a/ValidateXmlFileUseXsdSchemaPoC/Jaroszek.ProofOfConcept.ValidateXml.csproj
+++ b/ValidateXmlFileUseXsdSchemaPoC/Jaroszek.ProofOfConcept.ValidateXml.csproj
@@ -82,7 +82,7 @@
     <Compile Include="Interfaces\IXmlFileValidation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\SaxonValidate.cs" />
+    <Compile Include="Services\XmlDocumentValidateUseSaxon.cs" />
     <Compile Include="Services\XmlDocumentValidate.cs" />
   </ItemGroup>
   <ItemGroup>
