--- a/ValidateXmlFileUseXsdSchemaPoC/Jaroszek.ProofOfConcept.ValidateXml.csproj
+++ b/ValidateXmlFileUseXsdSchemaPoC/Jaroszek.ProofOfConcept.ValidateXml.csproj
@@ -79,11 +79,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actions.cs" />
     <Compile Include="Interfaces\IXmlFileValidation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\XmlDocumentValidateUseSaxon.cs" />
     <Compile Include="Services\XmlDocumentValidate.cs" />
+    <Compile Include="ValidateConditioner.cs" />
+    <Compile Include="ValidatorConditionerFactory.cs" />
+    <Compile Include="XmlFactory.cs" />
+    <Compile Include="XMLSaxonFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
