--- a/ValidateXmlFileUseXsdSchemaPoC/Jaroszek.ProofOfConcept.ValidateXml.csproj
+++ b/ValidateXmlFileUseXsdSchemaPoC/Jaroszek.ProofOfConcept.ValidateXml.csproj
@@ -80,10 +80,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\IXmlFileValidation.cs" />
+    <Compile Include="IValidatorFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\XmlDocumentValidateUseSaxon.cs" />
     <Compile Include="Services\XmlDocumentValidate.cs" />
+    <Compile Include="ValidatorFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
