--- a/ValidateXmlFileUseXsdSchemaPoC/Jaroszek.ProofOfConcept.ValidateXml.csproj
+++ b/ValidateXmlFileUseXsdSchemaPoC/Jaroszek.ProofOfConcept.ValidateXml.csproj
@@ -83,6 +83,7 @@
     <Compile Include="IValidatorFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RunValidate.cs" />
     <Compile Include="Services\XmlDocumentValidateUseSaxon.cs" />
     <Compile Include="Services\XmlDocumentValidate.cs" />
     <Compile Include="ValidatorFactory.cs" />
