Add an enum and modify the code to use this new enum.

--- a/ValidateXmlFileUseXsdSchemaPoC/Jaroszek.ProofOfConcept.ValidateXml.csproj
+++ b/ValidateXmlFileUseXsdSchemaPoC/Jaroszek.ProofOfConcept.ValidateXml.csproj
@@ -86,6 +86,7 @@
     <Compile Include="RunValidate.cs" />
     <Compile Include="Services\XmlDocumentValidateUseSaxon.cs" />
     <Compile Include="Services\XmlDocumentValidate.cs" />
+    <Compile Include="ValidateMode.cs" />
     <Compile Include="ValidatorFactory.cs" />
   </ItemGroup>
   <ItemGroup>
